whiteBox 및 processor.stdout 처리